--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "crypto-js": "^4.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
@@ -16,6 +18,8 @@
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.2",
     "react-toastify": "^9.0.4",
+    "react-top-loader": "^1.0.0",
+    "react-top-loading-bar": "^2.1.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1"
   },
