--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "crypto-js": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.2",
