fiebase api's done

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 MONGO_URI="mongodb://localhost/bhyu"
-NEXT_PUBLIC_HOST="http://localhost:3001"
+NEXT_PUBLIC_HOST="http://localhost:3000"
+
+NEXT_PUBLIC_apiKey: "AIzaSyAdq-XZHG21phwSEjAHKqA2HvxbPI_OtL4"
+NEXT_PUBLIC_authDomain: "yoga-site-posts.firebaseapp.com"
+NEXT_PUBLIC_projectId: "yoga-site-posts"
+NEXT_PUBLIC_storageBucket: "yoga-site-posts.appspot.com"
+NEXT_PUBLIC_messagingSenderId: "65315338198"
+NEXT_PUBLIC_appId: "1:65315338198:web:b247c4e6cfcc70c4da1677"
