--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "mongoose": "^6.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
+    "react-file-base64": "^1.0.3",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.2",
     "react-toastify": "^9.0.4",
