--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGO_URI="mongodb://localhost/bhyu"
 <!-- NEXT_PUBLIC_HOST="https://e-commerce-website-2f8k7wi9u-parth305.vercel.app" -->
-NEXT_PUBLIC_HOST="http://localhost:3000"
+NEXT_PUBLIC_HOST="https://yoga-site-ecommerce.vercel.app/"
 
 NEXT_PUBLIC_apiKey: "AIzaSyAdq-XZHG21phwSEjAHKqA2HvxbPI_OtL4"
 NEXT_PUBLIC_authDomain: "yoga-site-posts.firebaseapp.com"
