password reset booking

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
+    "@emailjs/nodejs": "^2.1.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
@@ -16,22 +18,29 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
+    "boostrap": "^2.0.0",
     "crypto-js": "^4.1.1",
+    "date-fns": "^2.29.3",
+    "emailjs": "^4.0.1",
     "firebase": "^9.17.2",
     "framer-motion": "^6.4.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "next": "12.1.6",
-    "react": "18.1.0",
+    "react": "^18.1.0",
+    "react-bootstrap": "^2.7.2",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.1.0",
     "react-file-base64": "^1.0.3",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.0.4",
     "react-top-loader": "^1.0.0",
     "react-top-loading-bar": "^2.1.0",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
