--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "18.1.0",
     "react-file-base64": "^1.0.3",
     "react-icons": "^4.3.1",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.0.4",
