--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-file-base64": "^1.0.3",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^5.3.4",
+    "react-phone-number-input": "^3.2.20",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.0.4",
