--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "boostrap": "^2.0.0",
+    "bootstrap": "^5.2.3",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
     "emailjs": "^4.0.1",
@@ -28,9 +29,10 @@
     "mongoose": "^6.3.4",
     "next": "12.1.6",
     "react": "^18.1.0",
-    "react-bootstrap": "^2.7.2",
+    "react-bootstrap": "^2.7.4",
     "react-date-range": "^1.4.0",
     "react-dom": "18.1.0",
+    "react-feather": "^2.0.10",
     "react-file-base64": "^1.0.3",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^5.3.4",
